[gd_scene load_steps=3 format=3 uid="uid://bxug4kq7dbng6"]

[ext_resource type="Script" uid="uid://c1ansu7n3uwa6" path="res://scripts/ui/ability_indicator.gd" id="1_abc12"]
[ext_resource type="Texture2D" uid="uid://d0gwk5vou5q8v" path="res://assets/progress-bar-circle.png" id="2_def34"]

[node name="AbilityIndicator" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_abc12")

[node name="AbilityIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -1.0
offset_right = 5.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="KeyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.0
offset_right = 27.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "SPACE"
horizontal_alignment = 1

[node name="CooldownArc" type="TextureProgressBar" parent="."]
visibility_layer = 513
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -37.0
offset_right = 111.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.492795, 0.486535)
max_value = 10.0
step = 0.01
fill_mode = 4
texture_under = ExtResource("2_def34")
texture_progress = ExtResource("2_def34")
tint_under = Color(0.0980392, 0.0980392, 0.0980392, 0.627451)
